welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:3: error: '<-' expected but integer literal found.
  for (i<_ 0 to nums.length) {
           ^occurrences:8: error: illegal start of simple expression
} 
^