welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = { 
  var occ: Int =0
  for (i<_ 0 to nums.length) {
    if (nums(i)==lookingFor) {
      occ=occ+1
    }
  } return occ
}